--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Table</title>
 </head>
 <body>
     
-    <div id="app" class="container"></div>
+    <div id="app" class="container">
+
+    </div>
 
 </body>
 </html>
